Valor de mercado y calculo de divisas

--- a/AutoClick/Pages/Admin/Dashboard_Old.cshtml
+++ b/AutoClick/Pages/Admin/Dashboard_Old.cshtml
@@ -282,7 +282,7 @@
                         <li>
                             <div>
                                 <div class="item-name">@auto.Marca @auto.Modelo</div>
-                                <div class="item-detail">Año: @auto.Ano - @auto.ValorFiscalFormateado</div>
+                                <div class="item-detail">Año: @auto.Ano - @auto.PrecioEnCRC</div>
                             </div>
                             <div class="item-detail">ID: @auto.Id</div>
                         </li>
