--- a/AutoClick/Pages/Explorar.cshtml
+++ b/AutoClick/Pages/Explorar.cshtml
@@ -246,7 +246,7 @@
                         <!-- Car Info -->
                         <div class="simple-auto-tile-info">
                             <div class="simple-auto-tile-title">@auto.NombreCompleto</div>
-                            <div class="simple-auto-tile-price">@auto.ValorFiscalFormateado</div>
+                            <div class="simple-auto-tile-price">@auto.PrecioEnCRC</div>
                         </div>
                     </a>
                 }
