--- a/AutoClick/Pages/Guardados.cshtml
+++ b/AutoClick/Pages/Guardados.cshtml
@@ -86,7 +86,7 @@
                 <!-- Car Info -->
                 <div class="simple-auto-tile-info">
                     <div class="simple-auto-tile-title">@auto.NombreCompleto</div>
-                    <div class="simple-auto-tile-price">@auto.ValorFiscalFormateado</div>
+                    <div class="simple-auto-tile-price">@auto.PrecioEnCRC</div>
                 </div>
             </a>
         }
